<resources>

    <string name="title_home">Home Screen</string>

    <string name="action_settings">Settings</string>

    <string name="app_name">Patio Melba</string>
    <string name="app_name_login">melba.</string>
    <string name="username_placeholder">User Name</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>

    <string name="personal_title_1">Stripe your beer</string>
    <string name="personal_title_2">Personal Statistics</string>
    <string name="personal_title_3">Show stripe history</string>
    <string name="general_title_1">Stripe for someone else</string>
    <string name="general_title_2">General statistics</string>
    <string name="personal_stripe_beer">Stripe 1 beer!</string>
    <string name="personal_stats_1">Beer drunk this week:</string>
    <string name="personal_stats_2">Total beer drunk:</string>
    <string name="personal_stats_3">Average price per beer:</string>
    <string name="personal_stats_4">Beer drunk in moneys:</string>

    <string name="pref_logged_in_before">com.melbasolutions.melbaapp.PREFERENCE_LOGGED_IN_BEFORE</string>
    <string name="pref_pref_name">com.melbasolutions.melbaapp.PREFERENCE_NAME</string>
    <string name="pref_user_id">com.melbasolutions.melbaapp.USER_ID</string>
    <string name="pref_last_updated">com.melbasolutions.melbaapp.LAST_UPDATED</string>

    <string name="webservice_location">http://elborio.student.utwente.nl:80/MelbaApp/MelbaService.php</string>
    <string name="webservice_location_emulator">http://10.0.2.2:80/MelbaApp/MelbaService.php</string>

    <string name="progress_dialog_title_login">Logging in.</string>
    <string name="progress_dialog_message_login">This should not take more than one minute.</string>
    <string name="progress_dialog_title_getstats">Getting stats from server.</string>
    <string name="progress_dialog_message_getstats">Kijken hoeveel je hebt gezopen...</string>

</resources>
